# pattern-finder

./: .gitignore  README.md  start.sh
backend/: pyproject.toml  render.yaml  requirements.txt
backend/app/: main.py
backend/app/api/endpoints/: analysis.py
backend/app/core/: config.py  pattern_config.py
backend/app/db/: base.py  session.py
backend/app/db/models/: ohlcv.py
backend/app/db/repositories/: ohlcv.py
backend/app/schemas/: analysis.py
backend/app/services/: data_ingestion.py  pattern_matcher.py  pattern_recognition_module.py  vision_processing.py
backend/scripts/: fetch_data.py  ingest.py  populate_top_coins.py  update_data.py
frontend/: next.config.ts  package-lock.json  package.json  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AnalysisDashboard.tsx  ChartContainer.tsx  Header.tsx  MatchDatabase.tsx  UploadTerminal.tsx
